It's that time of the year again

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1,5 +1,6 @@
-/* © 2016 NauStud.io
+/* © 2018 NauStud.io
  * @author Tw
+ * @contributors Eric Tran, Tu Dich, Le Pham
  */
 // stylelint-disable color-named, color-no-hex, selector-class-pattern, selector-max-id
 // variables
