--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -2279,6 +2279,7 @@ button.button-naucoin {
 	max-width: 500px;
 	margin: 50px auto 0 auto;
 	min-height: calc(100vh - 130px); // to place footer nicely at bottom
+	padding: 0 20px;
 
 	&__logo {
 		max-width: 200px;
