Highlight current playing songs even when user pauses the song

--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -1253,6 +1253,10 @@ dt::before {
 		align-items: center;
 		justify-content: space-between;
 
+		&--playing {
+			background-color: #fafafa;
+		}
+
 		&__container {
 			position: relative;
 			width: auto;
