--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -25,6 +25,9 @@ $color-07: rgba(223, 201, 178, 0.4);
 $color-09: rgba(211, 211, 211, 1);
 $color-nau: #977857;
 $color-red: #f00;
+$chatbox-color: #50b748;
+$chatbox-background-color: #fcfcfc;
+$chatbox-border: #ddd;
 
 * {
 	box-sizing: border-box;
@@ -2341,6 +2344,75 @@ button.button-naucoin {
 @media screen and (min-width: 768px) {
 	.toaster {
 		max-width: 600px;
+	}
+}
+
+//CHAT BOX
+
+@media screen and (min-width: 768px) {
+	.chatbox {
+		position: fixed;
+		bottom: 0;
+		width: 316px;
+		margin-left: 1.2rem;
+
+		&__text {
+			&--uppercase {
+				text-transform: uppercase;
+			}
+		}
+
+		&__conversation-container {
+			height: 380px;
+			border: 1px solid $chatbox-border;
+		}
+
+		&__conversation-inner {
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+		}
+
+		&__message-list {
+			list-style: none;
+		}
+
+		&__title {
+			padding: 0 1.2rem;
+			color: #fff;
+			background-color: $chatbox-color;
+			margin: 0;
+			cursor: pointer;
+			transition: all .2s;
+
+			&:hover {
+				background-color: darken($chatbox-color, 10);
+			}
+		}
+
+		&__conversation-content {
+			flex-grow: 15;
+			background-color: $chatbox-background-color;
+		}
+
+		&__composer {
+			flex-grow: 1;
+			display: flex;
+			justify-content: space-between;
+			padding: 0 1.5rem;
+
+			&__content,
+			&__button {
+				margin: 0;
+			}
+
+			&__button {
+				border: none;
+				background: transparent;
+				color: $chatbox-color;
+				width: 10px;
+			}
+		}
 	}
 }
 
