--- a/client/css/jukebox.scss
+++ b/client/css/jukebox.scss
@@ -2354,17 +2354,45 @@ button.button-naucoin {
 
 //CHAT BOX
 
-.chatbox {
+.chatbox-container {
 	display: none;
 }
 
 @media screen and (min-width: 768px) {
-	.chatbox {
+
+	.chatbox-container {
 		display: block;
 		position: fixed;
 		bottom: 0;
 		width: $chatbox-width;
 		margin-left: 1.2rem;
+	}
+
+	.chatbox {
+		&__icon-opener-container {
+			cursor: pointer;
+			position: fixed;
+			bottom: 20px;
+			left: 20px;
+			width: 60px;
+			height: 60px;
+			background: $chatbox-color;
+			border-radius: 50%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			box-shadow: 0px 1px 4px 1px $chatbox-border;
+			transition: all 0.3s;
+
+			&:hover {
+				background: lighten($chatbox-color, 5);
+			}
+		}
+
+		&__icon-opener {
+			color: $color-01;
+			font-size: 2.2rem !important;
+		}
 
 		&__text {
 			&--uppercase {
